tests/rosetta/out/Smalltalk/chaocipher.out
/tmp/chaocipher.st:5: parse error, expected ']'
